implentacion de imagenes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
-    <link rel="icon" href="CODIGO\IMAGENES\LOGO.png">
+    <link rel="icon" href="IMAGENES/LOGO.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- CSS -->
@@ -35,7 +35,7 @@
     <div id="offcanvas" class="offcanvas">
         <button class="close-offcanvas" id="closeOffcanvas">&times;</button>
         <div class="offcanvas-content" style="text-align: center;">
-            <img src="CODIGO\IMAGENES\LOGO.png" alt="Imagen del Tour Virtual" class="tour-image">
+            <img src="CODIGO/IMAGENES/LOGO.png" alt="Imagen del Tour Virtual" class="tour-image">
             <div style="background-color: #1A2B4C; border-radius: 30px; padding: 20px; margin: 20px 0;">
                 <p class="offcanvas-text" style="color: white;">Es hora de conocer todos los detalles sobre nuestro sistema de energia solar.</p>
             </div>
