--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="offcanvas" class="offcanvas">
         <button class="close-offcanvas" id="closeOffcanvas">&times;</button>
         <div class="offcanvas-content" style="text-align: center;">
-            <img src="CODIGO/IMAGENES/LOGO.png" alt="Imagen del Tour Virtual" class="tour-image">
+            <img src="IMAGENES/LOGO.png" alt="Imagen del Tour Virtual" class="tour-image">
             <div style="background-color: #1A2B4C; border-radius: 30px; padding: 20px; margin: 20px 0;">
                 <p class="offcanvas-text" style="color: white;">Es hora de conocer todos los detalles sobre nuestro sistema de energia solar.</p>
             </div>
@@ -52,7 +52,7 @@
             <h2 style="text-align: center; line-height: 1.5; margin-bottom: 20px; color: white; font-size: 40px;">Paneles Solares</h2>
             </div>
             <DIV style="display: flex;justify-content: center;align-items: center;">
-            <img CLASS= "VIDEOS" SRC="CODIGO\IMAGENES\PANEL SOLAR.jpg" alt="PANELES">
+            <img CLASS= "VIDEOS" SRC="IMAGENES/PANEL SOLAR.jpg" alt="PANELES">
             </DIV>
             <p CLASS="JUSTIFICAR">
                 Son dispositivos que convierten la luz solar en electricidad mediante el efecto fotovoltaico. Están hechos de celdas de silicio que generan 
@@ -69,7 +69,7 @@
             <h2 style="text-shadow: 10px; text-align: center; line-height: 1.5; margin-bottom: 30px; color: white; font-size: 40px;">Cableado Solar</h2>
             </div>
             <DIV style="display: flex;justify-content: center;align-items: center;">
-            <img CLASS= "VIDEOS" SRC="CODIGO/IMAGENES/CABLE.webp" alt="PANELES">
+            <img CLASS= "VIDEOS" SRC="IMAGENES/CABLE.webp" alt="PANELES">
             </DIV>
             <p CLASS="JUSTIFICAR" style="margin-top: 5%;">
                 El cableado solar es fundamental para la transmisión eficiente de la energía generada por los paneles fotovoltaicos hacia el inversor o sistema de almacenamiento. 
@@ -83,7 +83,7 @@
             <h2 style="text-shadow: 10px; text-align: center; line-height: 1.5; margin-bottom: 30px; color: white; font-size: 40px;">Ley de Ohm</h2>
             </div>
             <DIV style="display: flex;justify-content: center;align-items: center;">
-            <img CLASS= "VIDEOS" SRC="CODIGO/IMAGENES/LEY.jpg" alt="PANELES">
+            <img CLASS= "VIDEOS" SRC="IMAGENES/LEY.jpg" alt="PANELES">
             </DIV>
             <p CLASS="JUSTIFICAR" style="margin-top: 5%;">
                 La Ley de Ohm se puede entender fácilmente con el ejemplo de un tanque de agua:
@@ -98,7 +98,7 @@
             <h2 style="text-shadow: 10px; text-align: center; line-height: 1.5; margin-bottom: 30px; color: white; font-size: 40px;">Inversores Solares</h2>
             </div>
             <DIV style="display: flex;justify-content: center;align-items: center;">
-            <img CLASS= "VIDEOS" SRC="CODIGO/IMAGENES/INVERSOR.jpg" alt="PANELES">
+            <img CLASS= "VIDEOS" SRC="IMAGENES/INVERSOR.jpg" alt="PANELES">
             </DIV>
             <p CLASS="JUSTIFICAR" style="margin-top: 5%;">
                 Los inversores en sistemas solares convierten la corriente continua (CC) generada por los paneles solares en corriente alterna (CA) 
@@ -113,7 +113,7 @@
             <h2 style="text-shadow: 10px; text-align: center; line-height: 1.5; margin-bottom: 30px; color: white; font-size: 40px;">Tipos de Onda</h2>
             </div>
             <DIV style="display: flex;justify-content: center;align-items: center;">
-            <img CLASS= "VIDEOS" SRC="CODIGO/IMAGENES/ONDAS.jpeg" alt="PANELES">
+            <img CLASS= "VIDEOS" SRC="IMAGENES/ONDAS.jpeg" alt="PANELES">
             </DIV>
             <p CLASS="JUSTIFICAR" style="margin-top: 5%;">
                 Los inversores utilizan diferentes tipos de ondas para convertir la corriente continua (CC) de los paneles solares en corriente alterna (CA), dependiendo del modelo 
@@ -129,7 +129,7 @@
             <h2 style="text-shadow: 10px; text-align: center; line-height: 1.5; margin-bottom: 30px; color: white; font-size: 40px;">Viabilidad del Proyecto</h2>
             </div>
             <DIV style="display: flex;justify-content: center;align-items: center;">
-            <img CLASS= "VIDEOS" SRC="CODIGO/IMAGENES/VIABILIDAD.webp" alt="PANELES">
+            <img CLASS= "VIDEOS" SRC="IMAGENES/VIABILIDAD.webp" alt="PANELES">
             </DIV>
             <p CLASS="JUSTIFICAR" style="margin-top: 5%;">
                 La implementación de un sistema de paneles solares fotovoltaicos es una inversión rentable a largo plazo. Según nuestro estudio, una inversión aproximada de 22.000.000 
