--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/main.js" defer></script>
     
 </head>
-<body style="background-image: url(CODIGO/IMAGENES/FONDO.png) ; margin: 10; padding: 100; height: 100%; display: flex; flex-direction: column; overflow-y: auto;">
+<body style="background-image: url(IMAGENES/FONDO.png) ; margin: 10; padding: 100; height: 100%; display: flex; flex-direction: column; overflow-y: auto;">
 
     <!-- Navbar  -->
     <nav class="navbar">
