--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <!-- Video Introductorio -->
     <video id="introVideo" class="hidden-video" playsinline>
-        <source src="videos/Entrada Corregida 02.mp4" type="video/mp4">
+        <source src="IMAGENES/Secuencia 01_1.mp4" type="video/mp4">
         Tu navegador no soporta la reproducción de videos.
     </video>
 
